XML client and general mapping with controller initialization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# DATASOURCE PROPERTIES
+spring.jpa.database=default
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/weather
+spring.datasource.username=weather
+spring.datasource.password=weather
+spring.datasource.hikari.minimum-idle=5
+spring.flyway.out-of-order=true
 
+#APP PROPERTIES
+app.job.weather-forecast-fetch.cron=* */30 * * * *
+app.client.xml.lang=eng
