web module is introduced with initial functionality, Place and PlaceStatement db structure change.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.flyway.out-of-order=true
 
 #APP PROPERTIES
 app.job.weather-forecast-fetch.cron=* */30 * * * *
+app.client.xml.api=https://www.ilmateenistus.ee/ilma_andmed/xml/forecast.php
 app.client.xml.lang=eng
