--- a/web/weather-check-ui/package.json
+++ b/web/weather-check-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-check-web",
+  "name": "sectors-frontend",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,9 +14,9 @@
   "dependencies": {
     "ant-design-vue": "^4.0.6",
     "axios": "^1.5.1",
+    "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
