--- a/web/build.gradle
+++ b/web/build.gradle
@@ -2,15 +2,12 @@ plugins {
     id "com.github.node-gradle.node" version "7.0.1"
 }
 
-group = 'com.example.weathercheck'
+group = 'com.example.weathercheck.web'
+version = '0.0.1'
 
 node {
     nodeProjectDir = file("${project.projectDir}/weather-check-ui")
     nodeProxySettings = ProxySettings.SMART
-}
-
-repositories {
-    mavenCentral()
 }
 
 tasks.register('run', NpmTask) {
