--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       - db
     depends_on:
       - db
-  frontend:
+  web:
     image: weather-forecast-web:0.1
-    container_name: weather-forecast-ui
+    container_name: weather-forecast-web
     build:
       dockerfile: web.Dockerfile
     ports:
