example image for README + ui improvements with day of week info

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.datasource.username=weather
 spring.datasource.password=weather
 spring.datasource.hikari.minimum-idle=5
 spring.flyway.out-of-order=true
+spring.jpa.open-in-view=false
 
 #APP PROPERTIES
-app.job.weather-forecast-fetch.cron=* */30 * * * *
+app.job.weather-forecast-fetch.cron=0 */30 * * * *
 app.client.xml.api=https://www.ilmateenistus.ee/ilma_andmed/xml/forecast.php
 app.client.xml.lang=eng
